--- a/style.css
+++ b/style.css
@@ -11,6 +11,46 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    overflow: hidden;
     margin: 0;
+    gap: 15px;
+    overflow: hidden;
+    background-color: #fafaff;
 }
+
+.carousel-container{
+    width: 60vw;
+    height: 60vh;
+    overflow: hidden;
+    position: relative;
+}
+
+.carousel-slide{
+    display: flex;
+    width: 100%;
+}
+
+img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+#prev,
+#next{
+    position: absolute;
+    background: transparent;
+    border: 0;
+    color: rgba(255, 255, 255, 0.9);
+    top: 50%;
+}
+
+#prev{
+    left: 5%;
+}
+
+#next{
+    right: 5%;
+}
+
+
